--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<a href="#castro_assessoria" class="icon solid fa-briefcase"><span>Assessoria...</span></a>
 						<a href="#portfolio" class="icon solid fa-code"><span>Portfolio</span></a>
 
-						<a href="https://api.whatsapp.com/send?l=pt_br&phone=5521990873315&amp;text=Olá, Estou entrando em contato pelo chat Whatsapp do site: raulcastro.com.br"
+						<a href="https://api.whatsapp.com/send?l=pt_br&phone=5521990873315&amp;text=Olá, Estou entrando em contato pelo chat Whatsapp do site: raulcastro.dev.br"
                         target="_blank" id="ws_icon_chat" class="icon brands fa-whatsapp"><span>Whatsapp</span></a>
 
 
@@ -222,7 +222,7 @@
 												<a href="/covid19" 
 											target=_blank
 											>
-												<small>www.raulcastro.com.br/covid19</small>
+												<small>https://github.com/raulc27/react-app-corona-virus-simples</small>
 												</a>
 											<p>
 												App feito em ReactJS, consulta <a href="https://disease.sh" target='_blank' >
