--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
 											<p>
 												Trabalhando com equipe em uma aplicação frontend para a ONG Teto (Rio de Janeiro).
 												Usando ReactJS e Leaflet, novas features sendo implementadas ao longo do tempo.
+												A aplicação atualmente também conta com uma api (backend) para login e um admin desenvolvido em React-Admin
 											</p>
 										
 																						
