--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
 										<a href="https://linkedin.com/in/raulc27"  target=_blank  class="icon brands fa-linkedin"></a>
 										<a href="https://github.com/raulc27"  target=_blank class="icon brands  fa-github"></a>
 										<a href="https://twitter.com/raulc27"  target=_blank  class="icon brands fa-twitter"></a>
-										<a href="https://medium.com/@raulc27"  target=_blank  class="icon brands fa-medium"></a>
-										<a href="https://youtube.com/raulc27"  target=_blank  class="icon brands fa-youtube"></a>
+						
 										<a href="https://gitlab.com/raulc27"  target=_blank  class="icon brands fa-gitlab"></a>
-										<a href="https://blog.raulcastro.com.br"  target=_blank  class="icon brands fa-wordpress"></a>
+										<a href="https://raulcastro.com.br"  target=_blank  class="icon brands fa-wordpress"></a>
 									</div>
 
 								</header>
