--- a/index.html
+++ b/index.html
@@ -406,9 +406,10 @@
 												</a>
 											
 											<ul>
-											<li>Criação de Apps para smartphone usando React-Native</li>										
-											<li>Criação de backends com NodeJS</li>
-											<li>Criação de painéis administrativos usando React-Admin</li>
+											<li>Atividades DevOps, colocando aplicações python em produção (SSL, NGINX (proxy reverso))</li>
+											<li>Desenvolvimento de Apps para smartphone usando React-Native</li>										
+											<li>Desenvolvimento de backends com NodeJS e Python</li>
+											<li>Desenvolvimento de painéis administrativos usando React-Admin</li>
 											</ul>
 										</div>
 
