--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 										</div>
 
 										<div class="col-8 col-sm-4 col-xs-4">
-											<h3>TetoMapa</h3>
+											<h3>Aluga Rio</h3>
 											<a href="http://alugario.com.br" 
 											target=_blank
 											>
