--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 									<div class="row" >
 									
 										<div class="col-4">
-											<a href="/covid19" >
+											<a href="https://pandemia.app.br" >
 											<img src="https://cdn4.iconfinder.com/data/icons/logos-3/600/React.js_logo-512.png"  class="img fit" style="width:50%;" alt="">
 											</a>
 										</div>
@@ -201,7 +201,7 @@
 												<small>https://pandemia.app.br</small>
 												</a>
 												<p>
-													Agora com domínio próprio (<b>pandmeia.app.br</b>)
+													Agora com domínio próprio (<b>pandemia.app.br</b>)
 												</p>
 											<p>
 												App feito em ReactJS, consulta <a href="https://disease.sh" target='_blank' >
