--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							<article id="home" class="panel intro">
 								<header>	
 									<h1>Raul Castro</h1>
-									<p>Economista, Dev e Analista de Sistemas </p>
+									<p>Analista de Sistemas, Google Cloud Engineer, Data Science e Economista</p>
 
 									<div class="icones " >
 										<a href="https://linkedin.com/in/raulc27"  target=_blank  class="icon brands fa-linkedin"></a>
@@ -173,7 +173,7 @@
 									<h2>Portfolio Dev</h2>
 
 									<p>
-										Aplicações próprias ou de projetos que participo.
+										Projetos que estou desenvolvendo por conta própria.
 									</p>
 									<p>
 										Para acessar o meu <b>Github</b>, <a href="https://github.com/raulc27" target=_blank>clique aqui</a>.
@@ -306,8 +306,10 @@
 										</div>
 										<div class="col-6">
 											<ul>
-												<li>Linguagens de programação: Javascript/Typescript, Python, Java</li>
+												<li>Javascript/Typescript, Python, Java</li>
 												<li>Linux</li>
+												<li>Docker e Kubernetes</li>
+												<li>MongoDB, mySQL e PostGres</li>
 												<li>Fluente em Inglês, alemão básico...</li>
 												<li>Pesquisa de mercado e análise de preços</li>
 												<li>viabilidade de projetos</li>
@@ -373,7 +375,7 @@
 								</header>
 								<p>
 									Como <b>Pessoa Jurídica</b>, <b>CNPJ: 21.098.607/0001­26 (Castro Assessoria) </b>, desenvolvo sistemas para escritórios
-									(basicamente transformo suas planilhas em um sistema (CRUD) web). 
+									(basicamente transformo suas planilhas em um sistema). 
 								</p>
 								<section>
 									<div class="row">
@@ -382,9 +384,9 @@
 											<h3>Atividades</h3>
 
 											<ul>
-												<li>Desenvolvimento (CRUDs)</li>
-												<li>Servidores de Arquivos</li>
-												<li>Gateways (pfsense), VPNs</li>
+												<li>Desenvolvimento sistemas: web, apps Android e servidores backend </li>
+												<li>Arquitetura Nuvem (Heroku, Google Cloud, AWS)</li>
+												<li>OnPremise: Servidores de Arquivos, Gateways, VPNs</li>
 											</ul>
 
 										</div>
