--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 									</div> <!-- FIM DO ROW  -->
 
 
-									<div clas="row">
+									<div class="row">
 										<div class="col-4">
 											<img src="https://cdn4.iconfinder.com/data/icons/logos-3/600/React.js_logo-512.png" style="width:50%;" alt="">
 										</div>
