fix: change icon

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 										
 										<a href="https://www.instagram.com/raulcastr/"  target=_blank  class="icon brands fa-instagram"></a>
 
-										<a href="https://skillsoft.digitalbadges.skillsoft.com/profile/rauldealmeidacastroneto759063/wallet"  target=_blank  class="icon brands fa-certificate"></a>
+										<a href="https://skillsoft.digitalbadges.skillsoft.com/profile/rauldealmeidacastroneto759063/wallet"  target=_blank  class="fa-certificate"></a>
 										
 
 
